done with the quick start experts

--- a/quickstart_experts.ipynb
+++ b/quickstart_experts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "quickstart_exports.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMffQsjWbNsvVMlVzWK5pVR",
+      "authorship_tag": "ABX9TyN1LsBH1HVyLuAA4oIEr38e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,227 @@
         "id": "9OheUdd7f4tl"
       },
       "source": [
-        ""
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D\n",
+        "from tensorflow.keras import Model"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e_TyztA7ggwq"
+      },
+      "source": [
+        "mnist = tf.keras.datasets.mnist\n"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Jtn1ePPglay",
+        "outputId": "3c82ec9b-8ce2-47b9-c028-0e6048549555",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TMHRh7gygrj_"
+      },
+      "source": [
+        "x_train, x_test = x_train / 255.0, x_test / 255.0"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JPK30tVeg0r3"
+      },
+      "source": [
+        "# add a channels dimension\n",
+        "x_train = x_train[..., tf.newaxis].astype(\"float32\")\n",
+        "x_test = x_test[..., tf.newaxis].astype(\"float32\")"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bu9MzGmFhcvt"
+      },
+      "source": [
+        "train_ds = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(10000).batch(32)"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DczDjCM2ijGk"
+      },
+      "source": [
+        "test_ds = tf.data.Dataset.from_tensor_slices((x_test, y_test)).batch(32)"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YP_mF9M7i8ki"
+      },
+      "source": [
+        "class MyModel(Model):\n",
+        "  def __init__(self):\n",
+        "    super(MyModel, self).__init__()\n",
+        "    self.conv1 = Conv2D(32, 3, activation='relu')\n",
+        "    self.flatten = Flatten()\n",
+        "    self.d1 = Dense(128, activation='relu')\n",
+        "    self.d2 = Dense(10)\n",
+        "\n",
+        "  def call(self, x):\n",
+        "    x = self.conv1(x)\n",
+        "    x = self.flatten(x)\n",
+        "    x = self.d1(x)\n",
+        "    return self.d2(x)\n",
+        "\n",
+        "model = MyModel()"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lyqO80m0jqQ7"
+      },
+      "source": [
+        "loss_object = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+        "optimizer = tf.keras.optimizers.Adam()"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xaw8ummHj8X8"
+      },
+      "source": [
+        "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
+        "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='train_accuracy')\n",
+        "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
+        "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='test_accuracy')"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hKRF1epSkfFd"
+      },
+      "source": [
+        "# use tf.GradientTape to trian the model\n",
+        "@tf.function\n",
+        "def train_step(images, labels):\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    predictions = model(images, training=True)\n",
+        "    loss = loss_object(labels, predictions)\n",
+        "  gradients = tape.gradient(loss, model.trainable_variables)\n",
+        "  optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+        "\n",
+        "  train_loss(loss)\n",
+        "  train_accuracy(labels, predictions)"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MdFw5BWdlmzE"
+      },
+      "source": [
+        "@tf.function\n",
+        "def test_step(images, labels):\n",
+        "  predictions = model(images, training=False)\n",
+        "  t_loss = loss_object(labels, predictions)\n",
+        "\n",
+        "  test_loss(t_loss)\n",
+        "  test_accuracy(labels, predictions)"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1ikxjZrQl8IV",
+        "outputId": "6de4af2b-cbae-4d01-fb1b-0b78b2c123fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "EPOCHS = 5\n",
+        "for epoch in range(EPOCHS):\n",
+        "  train_loss.reset_states()\n",
+        "  train_accuracy.reset_states()\n",
+        "  test_loss.reset_states()\n",
+        "  test_accuracy.reset_states()\n",
+        "\n",
+        "  for images, labels in train_ds:\n",
+        "    train_step(images, labels)\n",
+        "\n",
+        "  for test_images, test_labels in test_ds:\n",
+        "    test_step(test_images, test_labels)\n",
+        "\n",
+        "  print(\n",
+        "      f'Epoch {epoch + 1}, '\n",
+        "      f'Loss: {train_loss.result()}, '\n",
+        "      f'Accuracy: {train_accuracy.result() * 100}, '\n",
+        "      f'Test Loss: { test_loss.result()}, '\n",
+        "      f'Test Accuracy: {test_accuracy.result() * 100}'\n",
+        "  )"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1, Loss: 0.1437644064426422, Accuracy: 95.73500061035156, Test Loss: 0.05598921328783035, Test Accuracy: 98.15999603271484\n",
+            "Epoch 2, Loss: 0.04327187314629555, Accuracy: 98.66999816894531, Test Loss: 0.05783041566610336, Test Accuracy: 98.07999420166016\n",
+            "Epoch 3, Loss: 0.021886948496103287, Accuracy: 99.30833435058594, Test Loss: 0.06684401631355286, Test Accuracy: 97.91999816894531\n",
+            "Epoch 4, Loss: 0.013424485921859741, Accuracy: 99.55333709716797, Test Loss: 0.055953819304704666, Test Accuracy: 98.43000030517578\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
